--- a/cursos.html
+++ b/cursos.html
@@ -40,7 +40,7 @@
                 <img src="img/curso1.jpg" alt="imagen del curso">
             </div>
             <div class="curso__informacion">
-                <h4 class="no-margin">4 Recetas de Cafe para Principiantes</h4>
+                <h4 class="no-margin">Tecnicas de Extraccion de Cafe</h4>
             <p class="widget-curso__label">Precio:
                 <span class="widget-curso__info">Gratis</span>
             </p>
@@ -56,10 +56,10 @@
 
         <div class="curso">
             <div class="curso__imagen">
-                <img src="img/curso1.jpg" alt="imagen del curso">
+                <img src="img/curso2.jpg" alt="imagen del curso">
             </div>
             <div class="curso__informacion">
-                <h4 class="no-margin">4 Recetas de Cafe para Principiantes</h4>
+                <h4 class="no-margin">Taller para Tostar y Moler Granos</h4>
             <p class="widget-curso__label">Precio:
                 <span class="widget-curso__info">Gratis</span>
             </p>
@@ -75,7 +75,7 @@
 
         <div class="curso">
             <div class="curso__imagen">
-                <img src="img/curso1.jpg" alt="imagen del curso">
+                <img src="img/curso3.jpg" alt="imagen del curso">
             </div>
             <div class="curso__informacion">
                 <h4 class="no-margin">4 Recetas de Cafe para Principiantes</h4>
