--- a/entrada.html
+++ b/entrada.html
@@ -54,11 +54,9 @@
                 <a href="index.html" class="logo">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
                 </a>
-                <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-                </nav>
+                <div class="autor">
+                    <p>Heyner Hernandez Todos los derechos Reservados</p>
+                </div>
             </div>
         </div>
     </footer>
