Proyecto Terminado full 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafe</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <meta name="description" content="Pagina Web Blog Cafe">
     
     <!--Prefetch-->
     <link rel="prefetch" href="nosotros.html" as="document">
@@ -16,7 +16,7 @@
 
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -99,7 +99,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__info">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton--secundario">Mas Informacion</a>
+                    <a href="entrada.html" class="boton boton--secundario">Mas Informacion Sobre Nuestros Cursos</a>
                 </li>
 
                 <li class="widget-curso">
@@ -110,7 +110,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__info">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton--secundario">Mas Informacion</a>
+                    <a href="entrada.html" class="boton boton--secundario">Mas Informacion Sobre Nuestros Cursos</a>
                 </li>
             </ul>
         </aside>
