Proyecto Terminado full Total Final Mejoras

--- a/contacto.html
+++ b/contacto.html
@@ -71,8 +71,13 @@
                 id="mensaje"
                 ></textarea>
             </div>
-            <div class="campo">
-                <input type="submit" value="Enviar" class="boton boton--primario">
+            <div class="campo cmp">
+                <div class="espacio1">
+                    <input type="submit" value="Enviar" class="boton--primario btn boton">
+                </div>
+                <div class="espacio">
+
+                </div>
             </div>
         </form>
     </main>
